<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.authentication.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_login"
                style="@style/headline"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                tools:title="@string/login_appbar_title"
                tools:ignore="MissingConstraints">

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/iv_logo_login"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/logo_app_bg_remove"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar_login" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo_login"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                tools:hint="@string/email_edit_text_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_email_login"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                tools:hint="@string/password_edit_text_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_password_login"
            tools:text="@string/btn_login_text" />

        <TextView
            android:id="@+id/tv_term_condition"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical|center_horizontal"
            android:lineHeight="16sp"
            android:lineSpacingExtra="-2sp"
            android:textColor="#49454F"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            app:layout_constraintVertical_bias="0.053"
            tools:hint="@string/term_condition_login" />

        <TextView
            android:id="@+id/tv_doesnt_have_account"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:lineHeight="16sp"
            android:lineSpacingExtra="-2sp"
            android:textColor="#49454F"
            android:layout_marginBottom="16dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.05"
            tools:hint="Belum memiliki akun? Daftar" />
    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <View-->
<!--        android:id="@+id/loading_overlay"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:background="#80000000"-->
<!--        android:visibility="gone" />-->

<!--    <com.airbnb.lottie.LottieAnimationView-->
<!--        android:id="@+id/lottie_loading"-->
<!--        android:layout_width="100dp"-->
<!--        android:layout_height="100dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:visibility="gone"-->
<!--        app:lottie_autoPlay="true"-->
<!--        app:lottie_loop="true"-->
<!--        app:lottie_rawRes="@raw/loading_animation" />-->

</FrameLayout>