...
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@id/btn_login_onBoarding"
            app:tabBackground="@drawable/tabs_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"
            app:tabMode="fixed" />

        <Button
...
